# my-typeless

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  benchmark_rms.py  installer.iss  main.py  my_typeless.spec  pyproject.toml  test_caching.py  test_imports.py  test_rms.py  verify_ui.py
.Jules/: bolt.md  palette.md
.github/: dependabot.yml
.github/workflows/: build-release.yml  ci.yml  codeql.yml
.jules/: bolt.md
docs/development/: readme.md
docs/plans/: 2026-02-07-my-typeless-design.md
scripts/: benchmark_worker.py  build.py
src/my_typeless/: __init__.py  __main__.py  config.py  events.py  history.py  hotkey.py  icon_builder.py  icons.py  llm_client.py  main.py  recorder.py  settings_window.py  single_instance.py  stt_client.py  text_injector.py  tray.py  updater.py  version.py  webview_api.py  window_icon.py  worker.py
src/my_typeless/settings_window/: __init__.py  config_pages.py  copy_button.py  helpers.py  history_page.py  hotkey_button.py  test_page.py  window.py
src/my_typeless/web/: app.js  index.html
tests/: conftest.py  reproduce_issue.py  test_config.py  test_copy_button.py  test_updater.py  test_worker.py  test_worker_correctness.py  test_worker_latency.py  test_worker_logic.py  test_worker_mock.py  test_worker_opt.py  test_worker_optimization.py  test_worker_pipeline.py  verify_worker_pipeline.py
tests_repro/: mock_modules.py  test_reuse_clients.py
