[project]
name = "my-typeless"
version = "1.0.0"
description = "AI-powered voice dictation for Windows"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "openai>=2.17.0",
    "pyaudio>=0.2.14",
    "pyqt6>=6.10.2",
    "pywin32>=311",
]

[project.gui-scripts]
my-typeless = "my_typeless.main:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_typeless"]

[tool.hatch.version]
path = "src/my_typeless/version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'
