[project]
name = "my-typeless"
dynamic = ["version"]
description = "AI-powered voice dictation for Windows"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.20.0",
    "keyboard>=0.13.5",
    "openai>=2.17.0",
    "pillow>=10.0",
    "pyaudio>=0.2.14",
    "pystray>=0.19",
    "pywebview>=5.0",
    "pywin32>=311",
]

[project.gui-scripts]
my-typeless = "my_typeless.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "resvg_py>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_typeless"]

[tool.hatch.version]
path = "src/my_typeless/version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'
