[project]
name = "my-typeless"
dynamic = ["version"]
description = "AI-powered voice dictation for Windows"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.20.0",
    "keyboard>=0.13.5",
    "openai>=2.17.0",
    "pillow>=10.0",
    "pyaudio>=0.2.14",
    "pystray>=0.19",
    "pywebview>=5.0",
    "pywin32>=311",
]

[project.gui-scripts]
my-typeless = "my_typeless.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "resvg_py>=0.3",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_typeless"]

[tool.hatch.version]
path = "src/my_typeless/version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # 行长由 formatter 处理
    "SIM105", # try/except/pass 可读性优于 contextlib.suppress，不强制
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
pythonPlatform = "Windows"  # 仅支持 Windows，确保 ctypes.windll 等符号正确解析
typeCheckingMode = "basic"
reportMissingImports = "warning"  # 规避 keyboard/pyaudio 在 ubuntu runner 上缺 stub
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = "warning"  # 防止 type:ignore 堆积
